@startuml

title __COMPOSITE's Class Diagram__\n

  namespace com.atguigu.composite {
    class com.atguigu.composite.Client {
        {static} + main()
    }
  }
  

  namespace com.atguigu.composite {
    class com.atguigu.composite.College {
        ~ organizationComponents : List<OrganizationComponent>
        + College()
        + getDes()
        + getName()
        + remove()
        # add()
        # print()
    }
  }
  

  namespace com.atguigu.composite {
    class com.atguigu.composite.Department {
        + Department()
        + getDes()
        + getName()
        # print()
    }
  }
  

  namespace com.atguigu.composite {
    abstract class com.atguigu.composite.OrganizationComponent {
        - des : String
        - name : String
        + OrganizationComponent()
        + getDes()
        + getName()
        + remove()
        + setDes()
        + setName()
        # add()
        {abstract} # print()
    }
  }
  

  namespace com.atguigu.composite {
    class com.atguigu.composite.University {
        ~ organizationComponents : List<OrganizationComponent>
        + University()
        + getDes()
        + getName()
        + remove()
        # add()
        # print()
    }
  }
  

  com.atguigu.composite.College -up-|> com.atguigu.composite.OrganizationComponent
  com.atguigu.composite.Department -up-|> com.atguigu.composite.OrganizationComponent
  com.atguigu.composite.University -up-|> com.atguigu.composite.OrganizationComponent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
